--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.1",
+    "@paypal/react-paypal-js": "^7.8.3",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
