--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.3.0",
+    "cloudinary": "^1.37.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "js-cookie": "^3.0.1",
@@ -22,8 +24,10 @@
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
